==> apache/nuttx/arch/arm/src/nrf53/nrf53_adc.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/analog/adc.h>
#include <nuttx/analog/ioctl.h>
#include "arm_internal.h"
#include "nrf53_gpio.h"
#include "nrf53_adc.h"
#include "hardware/nrf53_saadc.h"

static inline void nrf53_adc_putreg(struct nrf53_adc_s *priv,
                                    uint32_t offset,
                                    uint32_t value)
{
  DEBUGASSERT(priv);

  putreg32(value, priv->base + offset);
}

static inline uint32_t nrf53_adc_getreg(struct nrf53_adc_s *priv,
                                        uint32_t offset)
{
  DEBUGASSERT(priv);

  return getreg32(priv->base + offset);
}

static int nrf53_adc_bind(struct adc_dev_s *dev,
                          const struct adc_callback_s *callback)
{
  struct nrf53_adc_s *priv = (struct nrf53_adc_s *) dev->ad_priv;

  DEBUGASSERT(dev);
  DEBUGASSERT(priv);

  priv->cb = callback;

  return OK;
}

static void nrf53_adc_reset(struct adc_dev_s *dev)
{
  struct nrf53_adc_s *priv = (struct nrf53_adc_s *) dev->ad_priv;

  DEBUGASSERT(dev);
  DEBUGASSERT(priv);

  /* TODO */

  UNUSED(priv);
}

static int nrf53_adc_setup(struct adc_dev_s *dev)
{
  struct nrf53_adc_s *priv = (struct nrf53_adc_s *) dev->ad_priv;
  int                 i    = 0;
  int                 ret  = OK;

  DEBUGASSERT(dev);
  DEBUGASSERT(priv);

  /* Disable ADC */

  nrf53_adc_putreg(priv, NRF53_SAADC_ENABLE_OFFSET, 0);

  /* Configure ADC */

  ret = nrf53_adc_configure(priv);
  if (ret < 0)
    {
      aerr("ERROR: nrf53_adc_configure failed: %d\n", ret);
      goto errout;
    }

  /* Configure ADC channels */

  for (i = 0; i < priv->chan_len; i += 1)
    {
      ret = nrf53_adc_chancfg(priv, i, &priv->channels[i]);
      if (ret < 0)
        {
          aerr("ERROR: chancfg failed: %d %d\n", i, ret);
          goto errout;
        }
    }

  /* Enable ADC */

  nrf53_adc_putreg(priv, NRF53_SAADC_ENABLE_OFFSET, 1);

  /* Calibrate ADC */

  ret = nrf53_adc_calibrate(priv);
  if (ret < 0)
    {
      aerr("ERROR: adc calibration failed: %d\n", ret);
      goto errout;
    }

  /* Attach the ADC interrupt */

  ret = irq_attach(priv->irq, nrf53_adc_isr, dev);
  if (ret < 0)
    {
      aerr("ERROR: irq_attach failed: %d\n", ret);
      goto errout;
    }

  /* Enable the ADC interrupt */

  up_enable_irq(priv->irq);

errout:
  return ret;
}

static void nrf53_adc_shutdown(struct adc_dev_s *dev)
{
  struct nrf53_adc_s *priv = (struct nrf53_adc_s *) dev->ad_priv;

  DEBUGASSERT(dev);
  DEBUGASSERT(priv);

  /* Stop SAADC */

  nrf53_adc_putreg(priv, NRF53_SAADC_TASKS_STOP_OFFSET, 1);

  /* Wait for SAADC stopped */

  while (nrf53_adc_getreg(priv, NRF53_SAADC_EVENTS_STOPPED_OFFSET) != 1);

  /* Disable SAADC */

  nrf53_adc_putreg(priv, NRF53_SAADC_ENABLE_OFFSET, 0);
}

static void nrf53_adc_rxint(struct adc_dev_s *dev, bool enable)
{
  struct nrf53_adc_s *priv   = (struct nrf53_adc_s *) dev->ad_priv;
  uint32_t            regval = 0;

  DEBUGASSERT(dev);
  DEBUGASSERT(priv);

  ainfo("RXINT enable: %d\n", enable ? 1 : 0);

  regval = SAADC_INT_END;

  if (enable)
    {
      nrf53_adc_putreg(priv, NRF53_SAADC_INTENSET_OFFSET, regval);
    }
  else
    {
      nrf53_adc_putreg(priv, NRF53_SAADC_INTENCLR_OFFSET, regval);
    }
}

static int nrf53_adc_ioctl(struct adc_dev_s *dev, int cmd,
                           unsigned long arg)
{
  struct nrf53_adc_s *priv = (struct nrf53_adc_s *) dev->ad_priv;
  int ret                  = OK;

  DEBUGASSERT(dev);
  DEBUGASSERT(priv);

  switch (cmd)
    {
      case ANIOC_TRIGGER:
        {
          /* Start ADC */

          nrf53_adc_putreg(priv, NRF53_SAADC_TASKS_START_OFFSET, 1);

          /* Trigger first sample */

          nrf53_adc_putreg(priv, NRF53_SAADC_TASKS_SAMPLE_OFFSET, 1);
        }
        break;

      case ANIOC_GET_NCHANNELS:
        {
          /* Return the number of configured channels */

          ret = priv->chan_len;
        }
        break;

      default:
        {
          aerr("ERROR: Unknown cmd: %d\n", cmd);
          ret = -ENOTTY;
        }
        break;
    }

  return ret;
}

struct adc_dev_s *nrf53_adcinitialize(
    const struct nrf53_adc_channel_s *chan, int channels)
{
  struct adc_dev_s   *dev  = NULL;
  struct nrf53_adc_s *priv = NULL;
  int                 i    = 0;

  DEBUGASSERT(chan != NULL);
  DEBUGASSERT(channels <= CONFIG_NRF53_SAADC_CHANNELS);

#ifdef CONFIG_NRF53_SAADC_TIMER
  if (channels > 1)
    {
      aerr("ERORR: timer trigger works only for 1 channel!\n");
      goto errout;
    }
#endif

  /* Get device */

  dev = &g_nrf53_adc;

  /* Get private data */

  priv = (struct nrf53_adc_s *) dev->ad_priv;

  /* Copy channels configuration */

  ainfo("channels: %d\n", channels);

  for (i = 0; i < channels; i += 1)
    {
      memcpy(&priv->channels[i], &chan[i],
             sizeof(struct nrf53_adc_channel_s));
    }

  priv->chan_len = channels;

#ifdef CONFIG_NRF53_SAADC_TIMER
errout:
#endif
  return dev;
}
